layout/resize: add hovering div with z-index to prevent blocking - closes #320

--- a/packages/core/src/components/Cell/index.css
+++ b/packages/core/src/components/Cell/index.css
@@ -22,3 +22,13 @@
 }
 .ory-cell {}
 .ory-cell-bring-to-front {}
+
+.ory-cell-resizing-overlay:after {
+  content: " ";
+  z-index: 4;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
